tweak(ui): remove pfp from ui's

--- a/xtra/ui/index.html
+++ b/xtra/ui/index.html
@@ -64,46 +64,6 @@
 </head>
 
 <body>
-  <div class="glife-ui" style="display:none">
-    <div class="glife-health">
-      <div id="glife-health-level"></div>
-        <div class="glife-healthbar"/>
-      </div>
-      <div class="glife-logo">
-        <img src="glifeui/plus.png" alt="cona" width="18" height="18">
-      </div>
-    </div>
-    <div class="glife-armor">
-      <div id="glife-armor-level"></div>
-        <div class="glife-armourbar"/>
-      </div>
-      <div class="glife-logo2">
-        <img src="glifeui/shield.png" alt="cona" width="18" height="18">
-      </div>
-    </div>
-  </div>
-  <div class="fortnite-ui" style="display:none">
-    <div class="fortnite-armor">
-      <div id="fortnite-armor-level">
-        <p id="fortnite-armor-text" style="font-family: 'Roboto', sans-serif; font-size:17px;padding-left:5.5px">100 | 100</p>
-      </div>
-        <div class="fortnite-armourbar"/>
-      </div>
-      <div class="fortnite-logo2">
-        <img src="fortniteui/shield.png" alt="cona" width="18" height="18">
-      </div>
-    </div>
-    <div class="fortnite-health">
-      <div id="fortnite-health-level">
-        <p id="fortnite-health-text" style="font-family: 'Roboto', sans-serif; font-size:17px;padding-left:5.5px">100 | 100</p>
-      </div>
-        <div class="fortnite-healthbar"/>
-      </div>
-      <div class="fortnite-logo">
-        <img src="fortniteui/plus.png" alt="cona" width="18" height="18">
-      </div>
-    </div>
-  </div>
   </div>
     <div class="progress-container">
         <div id="rprogress"></div>
@@ -388,7 +348,7 @@
         <div class="money-container">
             <ul  class="tableRow" style="padding: 0px">
                 <li class="nav_button"><img src="money/img/cash.png" alt="" width="32" height="32"></li>
-                <li class="nav_button"><p id="cash-text">£0</p></li><img class="profilepic" id="profile-pic" src="https://i.imgur.com/rxGznrr.png" alt="" width="32" height="32" align="right">
+                <li class="nav_button"><p id="cash-text">£0</p></li>
             </ul>
             <ul id="redmoney" class="tableRow" style="padding: 0px">
                 <li class="nav_button"><img src="money/img/redmoney.png" alt="" width="32" height="32"></li>
