add(tutorial): Gender Picker on first spawn

--- a/xtra/ui/index.html
+++ b/xtra/ui/index.html
@@ -1786,13 +1786,13 @@
     <div id="menutut">
       <div class="rectut" id="male" onclick="PickGender('false')">
         <div class="box-tut">
-          <img src="https://cdn.discordapp.com/attachments/1121725762723135518/1165057950554013756/male_image.png?ex=654577c5&is=653302c5&hm=cc435c641826dd3a05fb19df91757e768b7334e4160253ca0f6eed662b83b524&" alt="Male" id="maleImage">
+          <img src="tutorial/img/male_image.png" alt="Male" id="maleImage">
         </div>
         <div class="tut-text-box" style="top: 75%; left: 187px; font-family: 'Marsden-Cm-Bold', sans-serif; font-size: 46px;">MALE</div>
       </div>
       <div class="rectut" id="female" onclick="PickGender('true')">
         <div class="box-tut">
-          <img src="https://cdn.discordapp.com/attachments/1121725762723135518/1165057949971001515/female_image.png?ex=654577c5&is=653302c5&hm=881cd918f451ddc02a1ff592dc9905c08d12f430acaf3b70f7201323448d35df&" alt="Female" id="femaleImage">
+          <img src="tutorial/img/female_image.png" alt="Female" id="femaleImage">
         </div>
         <div class="tut-text-box" style="top: 75%; left: 1100px; font-family: 'Marsden-Cm-Bold', sans-serif; font-size: 46px;">FEMALE</div>
       </div>
